<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:text="@string/Profile_Saya"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="72dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:src="@drawable/my_image"
        android:contentDescription="@string/my_image"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/nama"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/nim"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/alamat"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/riwayat_pendidikan"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck"/>


</LinearLayout>

